 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2015 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-01-27
r1582 Introduce flags for unisotropic Cartesian
- expire naive implementation
- expire facing_? flags and introduce bc_dn_? flags
- divergence_cc => change calculation from sum_(u^*) to div(u^*)

--------------------------
2015-01-21
r1581 bug fix in paintedCutOnPoint in Geometry.C

r1580 modify cut index and related functions

--------------------------
2015-01-20
r1579 expire polygon scaling, then Unit.Length is limited to "M" and "Non-dimensional"

--------------------------
2015-01-13
r1578 Moller's algorithm for triangle-line intersection

--------------------------
2015-01-11
r1577 flaging of long long int
- modify methods in FB_Define.h related to long long flag
- remove cutlib and replace functions in Geometry

--------------------------
2014-12-30
r1576 branch compressed-cut, initial comit
- d_cut : float >> long long
- add fill_bit_naive.h
- separate PolygonProperty class from Control.h

--------------------------
2014-12-25
r1575 modify CellID, BCflag output

r1574 modify SOLIDREV implementation

--------------------------
2014-12-21
r1573 Introduction of BC for solid revolution SOLIDREV

--------------------------
2014-12-05
r1572 header issue for BlockSaver.h

--------------------------
2014-12-04
r1571 introduce bvx in FILEIO
- output vbx file

--------------------------
2014-11-29
r1570 ducky isothermal flow
 - calculate component's bbox

r1569 ducky
 - bug fix : calulate the number of OBSTACLE in setBCIndexBase()

--------------------------
2014-11-23
r1568 Introduce boundary conditions for Central scheme
 - pvec_ibc_specv_fdm_(), vobc_pv_specv_fdm_()