@@ -17,7 +17,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.57])
-AC_INIT([FFVC], [2.0.6], [keno@riken.jp], [FFVC])
+AC_INIT([FFVC], [2.0.7], [keno@riken.jp], [FFVC])
 AM_INIT_AUTOMAKE()
 AC_CONFIG_SRCDIR([src/main.C])
 AC_CONFIG_HEADERS([config.h])
@@ -25,7 +25,7 @@ AC_CONFIG_HEADERS([config.h])
 #
 # revision No.
 #
-FFVC_REVISION="20150127_1900"
+FFVC_REVISION="20150131_1700"
 AC_SUBST(FFVC_REVISION)
 
 
