@@ -20,8 +20,8 @@
 #ifndef _FFVC_VERSION_H_
 #define _FFVC_VERSION_H_
 
-#define FFVC_VERSION_NO  "2.0.6"
-#define FFVC_REVISION    "20150127_1900"
+#define FFVC_VERSION_NO  "2.0.7"
+#define FFVC_REVISION    "20150131_1700"
 
 #endif /* _FFVC_VERSION_H_ */
 
